# samtools

./: .gitignore  .gitmodules  CMakeLists.txt  amplicon_stats.c  bam2depth.c  bam_addrprg.c  bam_ampliconclip.c  bam_cat.c  bam_fastq.c  bam_flags.c  bam_index.c  bam_markdup.c  bam_mate.c  bam_plcmd.c  bam_quickcheck.c  bam_reheader.c  bam_rmdup.c  bam_sort.c  bam_split.c  bam_stat.c  bam_tview.c  bam_tview.h  bam_tview_curses.c  bam_tview_html.c  bamshuf.c  bamtk.c  bedcov.c  config.h.in  coverage.c  cut_target.c  dict.c  faidx.c  padding.c  phase.c  sam.c  sam_opts.h  sam_view.c  stats.c  stats_isize.c  tmp_file.c
misc/: ace2sam.c  wgsim.c
test/: test.c
test/merge/: test_bam_translate.c  test_trans_tbl_init.c
test/split/: test_count_rg.c  test_expand_format_string.c  test_filter_header_rg.c  test_parse_args.c
